# RealSkel

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
core/: 3DLine.h  Animation.h  ArapDeform.h  Bone.cpp  Bone.h  BoneBoneCopyMap.cpp  BoneBoneCopyMap.h  BrushPainter.h  CMakeLists.txt  CSketchManager.cpp  CSketchManager.h  CSpline.cpp  CSpline.h  Color.h  ContourExtractor.cpp  ContourExtractor.h  EGL.h  EigenUtil.h  Euler_operations.h  FreehandLine.h  HermiteCurve.h  Iterator_range.h  Joint.h  Lerp.h  Line.h  MemoryPool.h  MeshDecomposer.cpp  MeshDecomposer.h  PixelImage.cpp  PixelImage.h  Plane.h  PolygonImage.h  Properties.h  Ray.h  ReadMe.md  SMesh.h  Skeleton.h  SymmetrySketch.cpp  SymmetrySketch.h  TMesh.cpp  (+57 more)
core/cmake/: FindLIBIGL.cmake
data/: Surface_mesh.h
demo_exe/: Instructions.md
demo_exe/Release/output/: BasicInfo.txt  before_fill_hole0.off  before_fill_hole1.off  before_fill_hole2.off  before_fill_hole3.off  before_fill_hole4.off  before_fill_hole5.off  before_fill_hole6.off  before_fill_hole7.off  cat_rawSSkel.txt  merged3D.off  sketchPolyOnXY.txt
demo_exe/Release/output/cat/: BasicInfo0.txt  BasicInfo1.txt  BasicInfo2.txt  BasicInfo3.txt  BasicInfo4.txt  BasicInfo5.txt  BasicInfo6.txt  SketchPolyline0.txt  SketchPolyline1.txt  SketchPolyline2.txt  SketchPolyline3.txt  SketchPolyline4.txt  SketchPolyline5.txt  SketchPolyline6.txt  SketchSpline0.txt  SketchSpline1.txt  SketchSpline2.txt  SketchSpline3.txt  SketchSpline4.txt  SketchSpline5.txt  SketchSpline6.txt  m_sskel0.txt  m_sskel1.txt  m_sskel2.txt  m_sskel3.txt  m_sskel4.txt  m_sskel5.txt  rawSSkel0.txt  rawSSkel1.txt  rawSSkel2.txt  rawSSkel3.txt  rawSSkel4.txt  rawSSkel5.txt  rawSSkel6.txt
egl/: readLine.h  string_util.h  time_str.h  writeLine.h  writeMatrix.h  writeStr.h
viewer/: BoneComplexityDialog.cpp  BoneComplexityDialog.h  BoneComplexityDialog.ui  CMakeLists.txt  ColorManager.h  Detector.cpp  Detector.h  EasyGL.cpp  EasyGL.h  GLData.h  MapsData.cpp  MapsData.h  README.md  SetInfoDialog.cpp  SetInfoDialog.h  SetInfoDialog.ui  SymetryDialog.cpp  SymetryDialog.h  SymetryDialog.ui  SymmetryAxisDialog.cpp  SymmetryAxisDialog.h  SymmetryAxisDialog.ui  Three.cpp  Three.h  Viewer_interface.h  color_palette.cpp  color_palette.h  color_palette_widget.cpp  color_palette_widget.h  common.h  containers.cpp  containers.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sketchapp.qrc  toyview.cpp  toyview.h  trackball.cpp  trackball.h
viewer/shader/: shader_line.frag  shader_line.geom  shader_line.vert  shader_mesh.frag  shader_mesh.vert  shader_mesh_with_texture.frag  shader_mesh_with_texture.vert  shader_point.frag  shader_point.geom  shader_point.vert  shader_sketch.frag  shader_sketch.vert  shader_texture.frag  shader_texture.vert
